# 715_data_transmission_upload

./: README.md  auto_start.service  hello_world.c
GuanDao_CiLiYi/: DataExtractor.h  Guandao_CiLiYi.cpp  Guandao_CiLiYi_backup.cpp  Guandao_CiLiYi_network.cpp  Thread_ReadUSB.cpp  test.cpp
GuanDao_CiLiYi/GuanDao_CiLiYi_code/: BiaoJiao  DataExtractor.cpp  DataExtractor.h  Guandao_CiLiYi  Guandao_CiLiYi.cpp  Guandao_CiLiYi_network.cpp  Thread_ReadUSB.cpp  Thread_ReadUSB.h  config.ini  makefile  start_command
GuanDao_CiLiYi/GuanDao_CiLiYi_code_no_network/: DataExtractor.cpp  DataExtractor.h  Guandao_CiLiYi.cpp  Thread_ReadUSB.cpp  Thread_ReadUSB.h
GuanDao_CiLiYi/logs/: Guandao_CiLiYi.ERROR  Guandao_CiLiYi.T3-A40i-Tronlong.root.log.ERROR.20241217-150037.16976  Guandao_CiLiYi.T3-A40i-Tronlong.root.log.ERROR.20241217-162023.20329  Guandao_CiLiYi.T3-A40i-Tronlong.root.log.ERROR.20250109-000633.2727  Guandao_CiLiYi.T3-A40i-Tronlong.root.log.ERROR.20250109-001509.3019  Guandao_CiLiYi.T3-A40i-Tronlong.root.log.ERROR.20250109-002715.3421  (+50 more)
csi_code/csi_test/: csi_2thread_fail.c  (+1 more)
network_save/: readme.md
simple_test/: test_mount_nas.c
课题3代码_可参考/: CMakeLists.txt  auto_upload.sh  config.ini  main_auto_gcsu  mount-nas.sh  readme.md  rm_all_file.sh
课题3代码_可参考/inc/: CheckSum.h  DataExtractor.h  Sync.h  Thread_ReadUSB.h  autograb.h  camera.h  config.h  gloghelper.h  stream_compress.h  thread_queue.h
课题3代码_可参考/src/: CheckSum.cpp  DataExtractor.cpp  Sync.cpp  Thread_ReadUSB.cpp  autograb.cpp  camera.cpp  config.cpp  gloghelper.cpp  main_auto_gcsu.cpp  stream_compress.cpp
(+723 files in other folders)
